--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-
+    
+    implementation 'com.google.guava:guava:32.0.1-jre'
     implementation 'io.rest-assured:rest-assured'
 
     compileOnly 'org.projectlombok:lombok'
