--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
       path: /h2-console
       enabled: true
   datasource:
-    url: jdbc:h2:file:~/local
+    url: jdbc:h2:mem:~/local
     username: sa
     password:
     driver-class-name: org.h2.Driver
