chore(#13) - JWT 설정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,8 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+
+jwt:
+  header: Authorization
+  secret: Zi1sYWItZWR1LWluZnJ1bi1zZWNyZXQtand0LWtleS1oczUxMgo=
+  token-validity-in-seconds: 86400
