[#13] 회원 로그인 기능 구현 (#21)
* feat(#13) - Session 객체 작성

* feat(#13) - 유효하지 않은 인증 커스텀 예외 작성

* feat(#13) - 세션을 관리하는 인메모리 객체 작성

* feat(#13) - SessionStorage 테스트 작성

* feat(#13) - INVALID_AUTHENTICATION 에러 코드 추가

* refactor(#13) - SessionStorage 메서드명 변경

* refactor(#13) - Session token 반환 메서드 추가

* refactor(#13) - Stub 객체들 upper level로 변경

* refactor(#13) - 변수명 변경, Void 타입의 반환 메서드 추가

* feat(#13) - 이메일과 비밀번호로 멤버를 조회하는 메서드 추가

* feat(#13) - 비밀번호 반환 메서드 추가

* feat(#13) - 유저가 존재하지 않는 예외 추가

* feat(#13) - 로그인 기능 구현 및 테스트 작성

* feat(#13) - 로그인 DTO 작성

* feat(#13) - 로그인 메서드 위임

* feat(#13) - DTO 변환 메서드 추가

* refactor(#13) - findByEmail로 변경

* refactor(#13) - 회원 조회 로직 수정

* feat(#13) - JWT 의존성 추가

* chore(#13) - JWT 설정

* feat(#13) - JWT 생성, 검증, 필터와 설정 객체 작성

* feat(#13) - 인증, 인가 관련 에러코드 추가

* feat(#13) - 회원 역할 반환 메서드 추가

* feat(#13) - JWT 관련 SecurityConfig 설정 추가

* feat(#13) - 회원 로그인 로직을 JWT 토큰 반환으로 수정

* test(#13) - Mockito Spy를 이용한 테스트 코드 작성

* feat(#13) - 회원 로그인 API 작성

* test(#13) - 회원 로그인 API 테스트 작성

* refactor(#13) - 정적 리소스, h2 콘솔 인증처리 무시 분리

* chore(#13) - gitignore iml 파일 무시

* refactor(#13) - ErrorCode 변경

* refactor(#13) - 적용되지 않는 객체 제거

* refactor(#13) - 사용하지 않는 키워드 제거

* refactor(#13) - 불필요한 키워드 제거

* refactor(#13) - 불필요한 키워드 제거

* refactor(#13) - SpringSecurity 인증, 인가 예외 핸들러 수정

* feat(#13) - SpringSecurity 인증, 인가 예외 핸들러 작성

* refactor(#13) - SpringSecurity 인증, 인가 예외 핸들러 설정

* refactor(#13) - 불필요한 인자 삭제

* refactor(#13) - config/security로 패키지 이동

* refactor(#13) - 리뷰 반영, ROLE 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,7 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+
+jwt:
+  secret: Zi1sYWItZWR1LWluZnJ1bi1zZWNyZXQtand0LWtleS1oczUxMgo=
+  token-validity-in-seconds: 86400
