--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
-# *.iml
+*.iml
 # *.ipr
 
 # CMake
@@ -99,8 +99,6 @@ fabric.properties
 ### Intellij+all Patch ###
 # Ignore everything but code style settings and run configurations
 # that are supposed to be shared within teams.
-
-*.idea
 .idea/*
 
 !.idea/codeStyles
