--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,9 @@ spring:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
-mybatis:
-  type-aliases-package: com.flab.infrun
-  configuration:
-    map-underscore-to-camel-case: true
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
