--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,9 +18,12 @@ spring:
   jpa:
     properties:
       hibernate:
-        show_sql: true
+        #        show_sql: true
         format_sql: true
-        use_sql_comments: true
+#        use_sql_comments: true
 jwt:
   secret: Zi1sYWItZWR1LWluZnJ1bi1zZWNyZXQtand0LWtleS1oczUxMgo=
   token-validity-in-seconds: 86400
+
+logging.level:
+  org.hibernate.SQL: debug
