--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
       path: /h2-console
       enabled: true
   datasource:
-    url: jdbc:h2:mem:~/local
+    url: jdbc:h2:mem:~/local;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -16,11 +16,12 @@ spring:
       max-file-size: 50MB
       max-request-size: 50MB
   jpa:
+    hibernate:
+      ddl-auto: create-drop
     properties:
       hibernate:
         show_sql: true
         format_sql: true
-        use_sql_comments: true
 jwt:
   secret: Zi1sYWItZWR1LWluZnJ1bi1zZWNyZXQtand0LWtleS1oczUxMgo=
   token-validity-in-seconds: 86400
