[#50] 주문 결제 기능 구현 (#55)
* refactor(#50) - 결제 실패 테스트 수정
    - 결제 실패 시 예외, 주문 상태 및 쿠폰 상태 확인

* feat(#50) - 주문 취소 로직 작성
    - 결제 실패 시 주문 상태를 주문 취소로 변경
    - 쿠폰을 사용되지 않은 상태로 변경
    - 쿠폰 상태를 변경하기 위해 로딩 전략을 EAGER로 수정
    - 예외 발생 시에도 트랜잭션을 롤백하지 않도록 dontRollbackOn 옵션을 사용

* test(#50) - 주문 컨트롤러 주문 결제 테스트 작성

* feat(#50) - 주문 결제 컨트롤러 작성

* test(#50) - 주문 결제 서비스 테스트 작성

* refactor(#50) - Price 값 객체 생성 책임을 Order 도메인으로 변경

* refactor(#50) - 도메인 코드 수정
    - 주문 도메인 생성 시 가격 값을 받아서 생성하도록 변경
    - Member 엔티티 값이 필요하지 않으므로 ID 참조로 변경
    - 가격 비교 메서드 추가

* feat(#50) - 주문 결제 서비스 생성

* feat(#50) - Payment 리포지토리 생성

* feat(#50) - Order 결제 로직 생성, 예외 추가

* feat(#50) - Payment 도메인 작성

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,3 +25,7 @@ spring:
 jwt:
   secret: Zi1sYWItZWR1LWluZnJ1bi1zZWNyZXQtand0LWtleS1oczUxMgo=
   token-validity-in-seconds: 86400
+
+payment:
+  toss:
+    test_secret_key: test_sk_Z61JOxRQVE1YDkDPo0yVW0X9bAqw
