chore(#3) - .gitignore .env 추가

--- a/.gitignore
+++ b/.gitignore
@@ -219,4 +219,6 @@ gradle-app.setting
 # Querydsl
 /src/main/generated/
 
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,windows,macos,java,gradle,git
