refactor(#51) - 피드백 반영 1. Layer 간 의존성 방향 확립 2. S3Config 설정 3. Member 직접 사용

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,3 +27,10 @@ jwt:
 
 logging.level:
   org.hibernate.SQL: debug
+
+aws:
+  s3:
+    bucketName: infrun
+    profileName: InfrunManager
+    region: ap-northeast-2
+    duration: 30
