--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - develop
       - main
+      - feature/#3-cicd
 
 jobs:
   build-and-push:
@@ -19,6 +20,9 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      - name: Test with Gradle
+        run: ./gradlew test
 
       - name: Build with Gradle
         run: ./gradlew build -x test
