chore(#3) - 테스트 커버리지 리포트 생성
- gradle Jacoco 의존성 및 설정 추가
- pr 생성 시 테스트를 위한 Test.yaml 작성

--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,16 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'jacoco'
 }
 
 group = 'flab.com'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+
+jacoco {
+    toolVersion = "0.8.8"
+}
 
 configurations {
     compileOnly {
@@ -70,6 +75,28 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    finalizedBy('jacocoTestReport')
+
+    jacocoTestReport {
+        reports {
+            xml.enabled true
+        }
+        finalizedBy('jacocoTestCoverageVerification')
+    }
+
+    jacocoTestCoverageVerification {
+        violationRules {
+            rule {
+                enabled = true
+                element = "CLASS"
+                limit {
+                    counter = "LINE"
+                    value = "COVEREDRATIO"
+                    minimum = "0".toBigDecimal()
+                }
+            }
+        }
+    }
 }
 
 bootJar {
