--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -18,6 +18,8 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+    hibernate:
+      ddl-auto: create
 
 jwt:
   secret: Zi1sYWItZWR1LWluZnJ1bi1zZWNyZXQtand0LWtleS1oczUxMgo=
