--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.9.10'
     id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.10'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.9.10'
+    id 'org.jlleitschuh.gradle.ktlint' version '10.2.0'
 }
 
 group = 'flab.com'
