--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,11 @@ jacoco {
     toolVersion = "0.8.8"
 }
 
-noArg {
-    annotation("jakarta.persistence.Entity")
-    annotation("jakarta.persistence.Embeddable")
-    annotation("jakarta.persistence.MappedSuperclass")
-    invokeInitializers = true
-}
 allOpen {
     annotation("jakarta.persistence.Entity")
     annotation("jakarta.persistence.Embeddable")
     annotation("jakarta.persistence.MappedSuperclass")
+    annotation("com.flab.infrun.common.annotation.ApplicationService")
 }
 
 configurations {
@@ -64,6 +59,7 @@ dependencies {
 
     // Querydsl 추가
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
