--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,32 +1,33 @@
 spring:
-  h2:
-    console:
-      path: /h2-console
-      enabled: true
-  datasource:
-    url: jdbc:h2:mem:~/local
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-  servlet:
-    multipart:
-      max-file-size: 50MB
-      max-request-size: 50MB
-  jpa:
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-        use_sql_comments: true
-    hibernate:
-      ddl-auto: create
+    h2:
+        console:
+            path: /h2-console
+            enabled: true
+    datasource:
+        url: jdbc:h2:mem:~/local
+        username: sa
+        password:
+        driver-class-name: org.h2.Driver
+    servlet:
+        multipart:
+            max-file-size: 50MB
+            max-request-size: 50MB
+    jpa:
+        properties:
+            hibernate:
+                show_sql: true
+                format_sql: true
+                use_sql_comments: true
+        hibernate:
+            ddl-auto: create
 
 jwt:
-  secret: Zi1sYWItZWR1LWluZnJ1bi1zZWNyZXQtand0LWtleS1oczUxMgo=
-  token-validity-in-seconds: 86400
+    secret: Zi1sYWItZWR1LWluZnJ1bi1zZWNyZXQtand0LWtleS1oczUxMgo=
+    access-token-expiry-secs: 86400
+    issuer: 'infrun'
 aws:
-  s3:
-    bucketName: infrun
-    profileName: InfrunManager
-    region: ap-northeast-2
-    duration: 30
+    s3:
+        bucketName: infrun
+        profileName: InfrunManager
+        region: ap-northeast-2
+        duration: 30
